--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@
 name: PHP Composer
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   run:
@@ -19,4 +19,4 @@ jobs:
         with:
           source: "."
           target: "/var/www/yeyilmaz.tk/public"
-          
+
