--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Build And Deploy v2
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Copy file via scp
         uses: appleboy/scp-action@master
         env:
