--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           KEY: ${{ secrets.SSH_KEY }}
         with:
           source: "."
-          target: "/var/www/ahmet"
+          target: "/var/www/yeyilmaz.tk/public"
 
